# METIS

./: CMakeLists.txt
GKlib/: gk_arch.h
libmetis/: CMakeLists.txt  metislib.h
